[gd_scene load_steps=4 format=2]

[ext_resource path="res://tilesets/UI_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://tilesets/title_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/UI.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.0392157, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
margin_right = 320.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
margin_left = 55.0
margin_top = 34.0
margin_right = 265.0
margin_bottom = 142.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_right = 210.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 210.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "Abyssians"

[node name="CenterContainer2" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 210.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 69.0
margin_right = 140.0
margin_bottom = 56.0

[node name="CenterContainer" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 71.0
margin_bottom = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 71.0
margin_bottom = 16.0

[node name="selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 7.0
margin_bottom = 16.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = ExtResource( 1 )
text = ">"

[node name="option" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 71.0
margin_bottom = 16.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Start"

[node name="CenterContainer2" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 20.0
margin_right = 71.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 71.0
margin_bottom = 16.0

[node name="selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 7.0
margin_bottom = 16.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = ExtResource( 1 )
text = ">"

[node name="option" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 11.0
margin_right = 71.0
margin_bottom = 16.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Settings"

[node name="CenterContainer3" type="CenterContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 40.0
margin_right = 71.0
margin_bottom = 56.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_right = 71.0
margin_bottom = 16.0

[node name="selector" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 7.0
margin_bottom = 16.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = ExtResource( 1 )
text = ">"

[node name="option" type="Label" parent="MainMenu/CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 11.0
margin_right = 71.0
margin_bottom = 16.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Exit"
